--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -15,6 +15,7 @@
 @import "core/_buttons.less";
 @import "core/_utilities.less";
 @import "core/_responsive-utilities.less";
+@import "core/_nx_helpers.less";
 
 // Components ************************
 // @import "components/_component-animations.less";
