--- a/app/jade/_layouts/_footer.jade
+++ b/app/jade/_layouts/_footer.jade
@@ -9,6 +9,7 @@ script(src='scripts/vendor/bootstrap/transition.js')
 script(src='scripts/vendor/bootstrap/collapse.js')
 script(src='scripts/vendor/bootstrap/dropdown.js')
 //script(src='scripts/vendor/bootstrap/carousel.js')
+script(src='scripts/vendor/html2canvas.js')
 
 script(src='scripts/controller.js')
 
