--- a/app/jade/_layouts/_header.jade
+++ b/app/jade/_layouts/_header.jade
@@ -1,11 +1,12 @@
-header.navbar.navbar-inverse.navbar-fixed-top
-  .container
-    .row.padding-medium
-      .col-sm-9.col-xs-8
-        a(href="/"): .h2 Michael Seel
-      .col-xs-1.text-right
-        a(href="#"): i.glyphicon.glyphicon-user.icon-large
-      .col-xs-1.text-right
-        a(href="#"): i.glyphicon.glyphicon-flash.icon-large
-      .col-xs-1.text-right
-        a(href="#"): i.glyphicon.glyphicon-book.icon-large
+header.navbar.navbar-fixed-top#header
+    .container
+      .row
+        .col-sm-9.col-xs-8
+          a(href="/"): .h2 Michael Seel
+        .col-xs-1.text-right
+          a(href="#"): i.glyphicon.glyphicon-user.icon-large
+        .col-xs-1.text-right
+          a(href="#"): i.glyphicon.glyphicon-flash.icon-large
+        .col-xs-1.text-right
+          a(href="#"): i.glyphicon.glyphicon-book.icon-large
+.blurheader
