--- a/app/styles/_variables.less
+++ b/app/styles/_variables.less
@@ -46,6 +46,16 @@
 
 @font-size-base:          16px;
 
+@font-size-lg:            16px;
+@font-size-md:            16px;
+@font-size-sm:            15px;
+@font-size-xs:            14px;
+
+@rem-base-lg:             16px;
+@rem-base-md:             14px;
+@rem-base-sm:             12px;
+@rem-base-xs:             11px;
+
 @font-size-large:         1.25rem; //ceil(@font-size-base * 1.125); // ~20px
 @font-size-small:         0.875rem; //ceil(@font-size-base * 0.85); // ~14px
 
