--- a/app/styles/modules/_header.less
+++ b/app/styles/modules/_header.less
@@ -1,15 +1,54 @@
 header {
-  opacity: 0.9;
-  transition: opacity 0.3s;
+  opacity: 1;
+  transition: all 0.5s;
+  overflow: hidden;
+  background-color: rgba(255, 255, 255, 0.2);
   &:hover { opacity: 1; }
   h1 { margin: 0; }
-  a { 
+  a {
   	transition: text-shadow 0.3s;
-  	color: #fff; 
+  	color: #fff;
   }
-  a:hover { 
+  a:hover {
   	color: #fff;
   	text-decoration: none;
-  	text-shadow: 0 0 3px #fff; 
+  	//text-shadow: 0 0 3px #fff;
   }
+  &:after {
+    content: '';
+    position: absolute;
+    z-index: 100;
+    top: 100%;
+    width: 100%;
+    height: 18px;
+    background: radial-gradient(at 50% -10%,rgba(0,0,0,.4),rgba(97,97,97,0) 55%);
+  }
+
+
+
+  > .container > .row {
+    padding: 1.7rem 0;
+    transition: padding 1s;
+   }
+
+  &.header-small {
+    > .container > .row {
+
+      padding: 0.7rem 0;
+      @media @xs { padding: 1rem 0 0.6rem;}
+   }
+  }
+}
+
+
+.blurheader {
+
+  height: 100px;
+  overflow: hidden;
+    -webkit-filter:blur(5px);
+    filter: url(#blur-effect-1);
+    top:0;
+    position: fixed;
+    right: 0;
+    left: 0;
 }
