--- a/app/styles/modules/_layout.less
+++ b/app/styles/modules/_layout.less
@@ -20,11 +20,31 @@
   //transform: rotateX(65deg);
   //transform-origin: 18% 0%;
   //perspective: 950;-webkit-transform: scale(1) scaleZ(1.0) rotateX(65deg);
-  padding: 17rem 0;
+  padding: 15.5rem 0;
   @media @xs { padding: 6rem 0; }
   //height: 30rem;
   background-position: center center;
   background-repeat: no-repeat;
-  background-size: cover;
+  //background-size: auto 100%;
 }
+
+.blur {
+-webkit-filter: blur(8px) contrast(0.4) brightness(1.4);
+-moz-filter: blur(8px) contrast(0.4) brightness(1.4);
+-o-filter: blur(8px) contrast(0.4) brightness(1.4);
+-ms-filter: blur(8px) contrast(0.4) brightness(1.4);
+clip: rect(0px 200px 516px 0px);
+transition: all 0.5s ease-in-out;
+-webkit-transform: translate3d(0,0,0);
+}
+
+/*.blur {
+  -webkit-filter: blur(3px);
+  -moz-filter: blur(3px);
+  -o-filter: blur(3px);
+  -ms-filter: blur(3px);
+  filter: url(#blur);
+  filter: blur(3px);
+  filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='3');
+}*/
 
