--- a/app/styles/modules/_layout.less
+++ b/app/styles/modules/_layout.less
@@ -28,6 +28,11 @@
   //background-size: auto 100%;
 }
 
+#content {
+  z-index: 3;
+  > .row { margin-right: 0; margin-left: 0; }
+}
+
 .blur {
 -webkit-filter: blur(8px) contrast(0.4) brightness(1.4);
 -moz-filter: blur(8px) contrast(0.4) brightness(1.4);
