--- a/app/styles/modules/_header.less
+++ b/app/styles/modules/_header.less
@@ -1,8 +1,9 @@
 header {
+  z-index: 6;
   opacity: 1;
   transition: all 0.5s;
   overflow: hidden;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.5);
   &:hover { opacity: 1; }
   h1 { margin: 0; }
   a {
@@ -40,13 +41,22 @@ header {
   }
 }
 
-
 .blurheader {
-
-  height: 100px;
+  z-index: 5;
+  height: 96px;
   overflow: hidden;
-    -webkit-filter:blur(5px);
-    filter: url(#blur-effect-1);
+
+  clip: rect(0, 2000px, 100px, 0);
+  #blurimage {
+      -webkit-filter: blur(8px);
+      //-moz-filter: blur(18px);
+      //-o-filter: blur(18px);
+      //-ms-filter: blur(18px);
+      //filter: url(#blur);
+      //filter: blur(18px);
+      //filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='18');
+      //filter: url(#blur-effect-1);
+  }
     top:0;
     position: fixed;
     right: 0;
