--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -13,37 +13,38 @@ block content
         .col-sm-12
           h1 Testing Lorem longer long
           h2 You like my style?
-    .container
-      .row
-        .col-lg-12
-          h1 Headlines
-          hr
-      .row
-        .col-lg-6
-          h1 h1 Lorem ipsum dolor sit amet
-          h2 h2 Lorem ipsum dolor sit amet
-          h3 h3 Lorem ipsum dolor sit amet
-          h4 h4 Lorem ipsum dolor sit amet
-          h5 h5 Lorem ipsum dolor sit amet
-          h6 h6 Lorem ipsum dolor sit amet
-          h1 h1 Lorem ipsum dolor sit amet
-          h2 h2 Lorem ipsum dolor sit amet
-          h3 h3 Lorem ipsum dolor sit amet
-          h4 h4 Lorem ipsum dolor sit amet
-          h5 h5 Lorem ipsum dolor sit amet
-          h6 h6 Lorem ipsum dolor sit amet
-          h1 h1 Lorem ipsum dolor sit amet
-          h2 h2 Lorem ipsum dolor sit amet
-          h3 h3 Lorem ipsum dolor sit amet
-          h4 h4 Lorem ipsum dolor sit amet
-          h5 h5 Lorem ipsum dolor sit amet
-          h6 h6 Lorem ipsum dolor sit amet
-          h1 h1 Lorem ipsum dolor sit amet
-          h2 h2 Lorem ipsum dolor sit amet
-          h3 h3 Lorem ipsum dolor sit amet
-          h4 h4 Lorem ipsum dolor sit amet
-          h5 h5 Lorem ipsum dolor sit amet
-          h6 h6 Lorem ipsum dolor sit amet
+    .row.bg-gray-dark
+      .container
+        .row
+          .col-lg-12
+            h1 Headlines
+            hr
+        .row
+          .col-lg-6
+            h1 h1 Lorem ipsum dolor sit amet
+            h2 h2 Lorem ipsum dolor sit amet
+            h3 h3 Lorem ipsum dolor sit amet
+            h4 h4 Lorem ipsum dolor sit amet
+            h5 h5 Lorem ipsum dolor sit amet
+            h6 h6 Lorem ipsum dolor sit amet
+            h1 h1 Lorem ipsum dolor sit amet
+            h2 h2 Lorem ipsum dolor sit amet
+            h3 h3 Lorem ipsum dolor sit amet
+            h4 h4 Lorem ipsum dolor sit amet
+            h5 h5 Lorem ipsum dolor sit amet
+            h6 h6 Lorem ipsum dolor sit amet
+            h1 h1 Lorem ipsum dolor sit amet
+            h2 h2 Lorem ipsum dolor sit amet
+            h3 h3 Lorem ipsum dolor sit amet
+            h4 h4 Lorem ipsum dolor sit amet
+            h5 h5 Lorem ipsum dolor sit amet
+            h6 h6 Lorem ipsum dolor sit amet
+            h1 h1 Lorem ipsum dolor sit amet
+            h2 h2 Lorem ipsum dolor sit amet
+            h3 h3 Lorem ipsum dolor sit amet
+            h4 h4 Lorem ipsum dolor sit amet
+            h5 h5 Lorem ipsum dolor sit amet
+            h6 h6 Lorem ipsum dolor sit amet
   svg(version='1.1', xmlns='http://www.w3.org/2000/svg')
     filter#blur
         fegaussianblur(stddeviation='3')
