--- a/app/styles/modules/_header.less
+++ b/app/styles/modules/_header.less
@@ -40,15 +40,25 @@ header {
    }
   }
 }
-
+.fadeout {
+  z-index: 5;
+  height: 96px;
+  top:0;
+  position: fixed;
+  right: 0;
+  left: 0;
+  background: linear-gradient(to bottom, rgba(50,50,50,0.85) 0%,rgba(50,50,50,0) 20%,rgba(50,50,50,0) 100%);
+}
 .blurheader {
   z-index: 5;
   height: 96px;
   overflow: hidden;
-
+  -webkit-filter: blur(4px);
   clip: rect(0, 2000px, 100px, 0);
-  #blurimage {
-      -webkit-filter: blur(8px);
+  canvas {
+    //margin-top: -20px;
+    //margin-bottom: -20px;
+      //-webkit-filter: blur(4px);
       //-moz-filter: blur(18px);
       //-o-filter: blur(18px);
       //-ms-filter: blur(18px);
