--- a/app/styles/modules/_header.less
+++ b/app/styles/modules/_header.less
@@ -47,7 +47,7 @@ header {
   position: fixed;
   right: 0;
   left: 0;
-  background: linear-gradient(to bottom, rgba(50,50,50,0.85) 0%,rgba(50,50,50,0) 20%,rgba(50,50,50,0) 100%);
+  //background: linear-gradient(to bottom, rgba(50,50,50,0.85) 0%,rgba(50,50,50,0) 20%,rgba(50,50,50,0) 100%);
 }
 .blurheader {
   z-index: 5;
@@ -60,10 +60,10 @@ header {
       -moz-filter: blur(4px);
       -o-filter: blur(4px);
       -ms-filter: blur(4px);
-      //filter: url(#blur);
-      filter: blur(4px);
-      filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='4');
-      filter: url(#blur-effect-1);
+      filter: url('/filters.svg#blur');
+      //filter: blur(4px);
+      //filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='4');
+      //filter: url(#blur-effect-1);
   }
     top:0;
     position: fixed;
