--- a/app/jade/_layouts/_header.jade
+++ b/app/jade/_layouts/_header.jade
@@ -4,10 +4,16 @@ header.navbar.navbar-fixed-top#header
       .col-sm-9.col-xs-8
         a(href="/"): .h2 Michael Seel
       .col-xs-1.text-right
-        a(href="#"): i.glyphicon.glyphicon-user.icon-large
+        a(href="#")
+          i.glyphicon.glyphicon-user.icon-large
+          .hidden-xs Profile
       .col-xs-1.text-right
-        a(href="#"): i.glyphicon.glyphicon-flash.icon-large
+        a(href="#")
+          i.glyphicon.glyphicon-flash.icon-large
+          .hidden-xs Work
       .col-xs-1.text-right
-        a(href="#"): i.glyphicon.glyphicon-book.icon-large
+        a(href="#")
+          i.glyphicon.glyphicon-book.icon-large
+          .hidden-xs Blog
 .blurheader
 .fadeout
