--- a/app/styles/modules/_layout.less
+++ b/app/styles/modules/_layout.less
@@ -26,6 +26,13 @@
   background-position: center center;
   background-repeat: no-repeat;
   //background-size: auto 100%;
+  /*.container {
+    transition: all 1s;
+  }
+  &:hover .container {
+    -webkit-transform: translateX(30px);
+
+  }*/
 }
 
 #content {
