--- a/app/jade/_layouts/_header.jade
+++ b/app/jade/_layouts/_header.jade
@@ -1,8 +1,10 @@
 header.navbar.navbar-fixed-top#header
   .container
+    .logo
     .row
       .col-sm-9.col-xs-8
-        a(href="/"): .h2 Michael Seel
+        a(href="/")
+          .h2 Michael Seel
       .col-xs-1.text-right
         a(href="#")
           i.glyphicon.glyphicon-user.icon-large
@@ -17,3 +19,4 @@ header.navbar.navbar-fixed-top#header
           .hidden-xs Blog
 .blurheader
 .fadeout
+
