--- a/app/styles/core/_type.less
+++ b/app/styles/core/_type.less
@@ -1,7 +1,7 @@
 //
 // Typography
 // --------------------------------------------------
-
+@import url(http://fonts.googleapis.com/css?family=Oswald:300);
 
 // Headings
 // -------------------------
