--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -4,15 +4,17 @@ block content
   #content
     .row.slide(style="background-image: url(images/slice-person.jpg);")
         .container
-          .col-xs-7.col-xs-offset-5
-            h1 Hi! I'm Michael
-            h2 i live in Cologne & <br>i love building the web...
+          .row
+            .col-xs-7.col-xs-offset-5
+              h1 Hi! I'm Michael
+              h2 i live in Cologne & <br>i love building the web...
 
     .row.bg-black.slide(style="background-image: url(images/slice-web.jpg)")
       .container
-        .col-sm-12
-          h1 Testing Lorem longer long
-          h2 You like my style?
+        .row
+          .col-sm-12
+            h1 Testing around a little bit
+            h2 You like my style?
     .row.bg-gray-dark
       .container
         .row
