--- a/app/styles/modules/_layout.less
+++ b/app/styles/modules/_layout.less
@@ -21,7 +21,11 @@
   //transform-origin: 18% 0%;
   //perspective: 950;-webkit-transform: scale(1) scaleZ(1.0) rotateX(65deg);
   padding: 15.5rem 0;
-  @media @xs { padding: 6rem 0; }
+  @media @xs {
+    padding: 6rem 0;
+    background-position: 40% center;
+
+  }
   //height: 30rem;
   background-position: center center;
   background-repeat: no-repeat;
