--- a/app/jade/_layouts/_default.jade
+++ b/app/jade/_layouts/_default.jade
@@ -7,6 +7,7 @@ html
     meta(content='michaseel, cologne', name='author')
     meta(content='3 days', name='revisit-after')
     meta(name='date', content=timestamp)
+    meta(name='viewport', content="width=device-width, initial-scale=1.0")
 
     // build:css styles/main.css
     link(href='styles/main.css', rel='stylesheet')
