--- a/app/styles/modules/_header.less
+++ b/app/styles/modules/_header.less
@@ -23,7 +23,7 @@ header {
   a:hover {
   	color: #fff;
   	text-decoration: none;
-  	//text-shadow: 0 0 3px #fff;
+  	text-shadow: 0 0 3px #fff;
   }
   &:after {
     content: '';
