fix(styles): added a star
add star for testing purposes

fixes nothins

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -42,7 +42,7 @@
 
 
 
-// Components w/ JavaScript *************
+// Components w/ JavaScript **************
 // @import "components/_modals.less";
 // @import "components/_tooltip.less";
 // @import "components/_popovers.less";
